--- a/WebContent/resources/css/header.css
+++ b/WebContent/resources/css/header.css
@@ -1,4 +1,5 @@
 @CHARSET "ISO-8859-1";
+
 html, body {
 	margin: 0;
 	padding: 0;
@@ -18,4 +19,12 @@ h1 {
 	background-color: black;
 	border-bottom-color: black;
 	width: 100%;
+}
+
+#headermainimage {
+	position: relative;
+	margin-left: 1%;
+	margin-top: 1%;
+	width: 20%;
+	height: 7%;
 }
