--- a/WebContent/resources/css/editbasestation.css
+++ b/WebContent/resources/css/editbasestation.css
@@ -1,1 +1,54 @@
 @CHARSET "ISO-8859-1";
+
+#mainform\3A namelabel {
+	margin-left: 30%;
+	margin-top: 20%;
+	font-family: "Times New Roman";
+	font-size: 25px;
+}
+
+#mainform\3A nametextbox {
+	margin-left: 30%;
+	margin-top: 0%;
+	width: 40%;
+	font-family: "Times New Roman";
+	font-size: 20px;
+}
+
+#mainform\3A longitudelabel {
+	margin-left: 30%;
+	margin-top: 3%;
+	font-family: "Times New Roman";
+	font-size: 25px;
+}
+
+#mainform\3A longitudetextbox {
+	margin-left: 30%;
+	margin-top: 0%;
+	width: 8%;
+	font-family: "Times New Roman";
+	font-size: 20px;
+}
+
+#mainform\3A latitudelabel {
+	margin-left: 30%;
+	margin-top: 3%;
+	font-family: "Times New Roman";
+	font-size: 25px;
+}
+
+#mainform\3A latitudetextbox {
+	margin-left: 30%;
+	margin-top: 0%;
+	width: 8%;
+	font-family: "Times New Roman";
+	font-size: 20px;
+}
+
+#mainform\3A altitudelabel {
+	margin-left: 30%;
+	margin-top: 0%;
+	width: 8%;
+	font-family: "Times New Roman";
+	font-size: 20px;
+}
